--- a/Diabetest2/app/src/main/res/layout/activity_administracion.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_administracion.xml
@@ -34,7 +34,7 @@
                 android:text="Administración de usuarios"
                 android:textAlignment="center"
                 android:textAllCaps="false"
-                android:textColor="@color/naranja"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic" />
 
