--- a/Diabetest2/app/src/main/res/layout/activity_discusion_comunidad.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_discusion_comunidad.xml
@@ -30,14 +30,14 @@
                 android:id="@+id/id_nombre_tema_foro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:text="Título foro"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintHorizontal_bias="0.0"
