--- a/Diabetest2/app/src/main/res/layout/activity_medicamento.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_medicamento.xml
@@ -33,7 +33,7 @@
                 android:layout_marginBottom="12dp"
                 android:text="Información de mi medicamento"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic" />
 
@@ -89,7 +89,7 @@
                 android:layout_marginLeft="4dp"
                 android:layout_weight="1"
                 android:text="Recordarme tomar este medicamento"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="15sp" />
 
             <TextView
@@ -103,7 +103,8 @@
             <TimePicker
                 android:id="@+id/timePicker"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:headerBackground="@color/u_blue_darker" />
 
             <Button
                 android:id="@+id/id_bt_guardar_medicamento"
