--- a/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_mensajes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/fondillo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_mensajes2">
+    android:background="@color/blanco">
 
 
     <android.support.design.widget.AppBarLayout
@@ -29,11 +29,11 @@
     <ScrollView
         android:id="@+id/scrollView5"
         android:layout_width="0dp"
-        android:windowSoftInputMode="adjustResize"
         android:layout_height="0dp"
         android:layout_marginTop="58dp"
         android:layout_marginBottom="8dp"
         android:fillViewport="true"
+        android:windowSoftInputMode="adjustResize"
         app:layout_constraintBottom_toTopOf="@+id/mensajet"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:text="Mis mensajes"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintHorizontal_bias="0.0"
