--- a/Diabetest2/app/src/main/res/layout/activity_modificar_recurso.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_modificar_recurso.xml
@@ -32,7 +32,7 @@
                 android:layout_weight="1"
                 android:text="Modificación de recurso"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic" />
 
