--- a/Diabetest2/app/src/main/res/layout/activity_observaciones.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_observaciones.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="Observaciones"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic" />
 
