--- a/Diabetest2/app/src/main/res/layout/activity_pacientes.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_pacientes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_pacientes"
+    android:background="@color/blanco"
     tools:context="juan.example.com.diabetest2.profesional.Pacientes">
 
     <TextView
@@ -13,11 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="7dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_x="87dp"
         android:layout_y="21dp"
         android:text="Evolución de mis pacientes"
@@ -34,10 +34,10 @@
         android:id="@+id/textView65"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="Da clic para ver la evolución del paciente"
         android:textColor="@color/blanco"
         android:textSize="12sp"
