--- a/Diabetest2/app/src/main/res/layout/activity_recursos_asignados_mis.xml
+++ b/Diabetest2/app/src/main/res/layout/activity_recursos_asignados_mis.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profesional.misioncruds.RecursosAsignadosMis"
-    android:background="@drawable/fondo_recursos">
+    android:background="@color/blanco"
+    tools:context=".profesional.misioncruds.RecursosAsignadosMis">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                 android:background="@color/blanco50"
                 android:text="Recursos asignados"
                 android:textAlignment="center"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/u_blue_darker"
                 android:textSize="24sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintHorizontal_bias="1.0"
