--- a/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
+++ b/Diabetest2/app/src/main/res/layout/fragment_pasos_logros_mision.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/bgapps"
 
     tools:context=".paciente.pasosLogrosMision">
 
@@ -13,33 +13,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="100dp"
+        >
 
         <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-
-
         android:layout_marginTop="10dp"
-
-        app:cardBackgroundColor="@color/blanco"
         app:cardElevation="10dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+
+                >
 
 
                 <TextView
                     android:id="@+id/nombre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="100dp"
                     android:text="TextView"
-
+                    android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Title"
                     android:textColor="@color/darkblue"
                     android:textSize="30sp" />
@@ -104,10 +103,10 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.RecyclerView
-            android:layout_marginLeft="50dp"
             android:id="@+id/recyclerPasos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"/>
     </LinearLayout>
 
 </FrameLayout>
