--- a/Diabetest2/app/src/main/res/layout/item_list_pasos.xml
+++ b/Diabetest2/app/src/main/res/layout/item_list_pasos.xml
@@ -42,18 +42,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:autoLink="phone"
                 android:text="N"
                 android:textColor="@color/cardview_dark_background"
-                android:textSize="50sp" />
+                android:textSize="50sp"
+                android:visibility="visible" />
 
             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="20dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:checked="false"
+                android:focusable="auto"
                 android:scaleX="2"
                 android:scaleY="2"
+                android:visibility="visible"
                 tools:layout_editor_absoluteX="311dp"
                 tools:layout_editor_absoluteY="43dp" />
 
