--- a/Diabetest2/app/src/main/res/values/colors.xml
+++ b/Diabetest2/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="naranja">#ee7428</color>
     <color name="year">#dedada</color>
     <color name="title">#222222</color>
-
+    <color name="gris2">#f1f1f1</color>
+    <color name="transparent">#ffffff</color>
+    <color name="title_level">#3c3c3c</color>
 </resources>
